--- a/website/style.css
+++ b/website/style.css
@@ -31,7 +31,7 @@
 body {
     font-family: 'Inter', sans-serif;
     background-color: var(--color-bg-dark);
-    background-image: url("https://images.unsplash.com/photo-1502679726485-931beda67f88?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cHVycGxlJTIwbmlnaHQlMjBza3l8ZW58MHx8MHx8fDA%3D");
+    background-image: url("https://cdn.wallpapersafari.com/72/71/ULjv5k.jpg");
     /* Deeper dark background */
     color: var(--color-text-light);
     /* Default text color */
