--- a/website/index.css
+++ b/website/index.css
@@ -9,7 +9,7 @@ body {
     
 
     /* Background with circles */
-    background-image: url("./images/bgabtus (1).jpg");
+    background-color:#000;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
