--- a/website/layout/navbar.html
+++ b/website/layout/navbar.html
@@ -274,7 +274,7 @@
 </head>
     <nav class="navbar">    
         <div class="logo">
-            <img src=".\images\Allied-Algorithms_logo.svg" class="logo-img" alt="Allied Logo">Allied
+            <img src="..\images\Allied-Algorithms_logo.svg" class="logo-img" alt="Allied Logo">Allied
         </div>
         <button class="hamburger-menu" aria-label="Toggle navigation menu">
             <span></span>
@@ -282,12 +282,12 @@
             <span></span>
         </button>
         <div class="navbar-links">
-           <div class="index"> <a href="./index.html">Home</a></div>
-           <div class ="member"><a href="./abtus.html">Members</a></div>
-           <div class ="seasons"><a href="./seasons.html">Seasons</a></div>
-           <div class ="robot"><a href="./robot.html">Robot Design</a></div>
-           <div class ="missions"><a href="./missions.html">Missions</a></div>
-           <div class ="allied-work"><a href="./hello.html">AlliedWork</a></div>
+           <div class="index"> <a href="../home/index.html">Home</a></div>
+           <div class ="member"><a href="../about-us/abtus.html">Members</a></div>
+           <div class ="seasons"><a href="../seasons/seasons.html">Seasons</a></div>
+           <div class ="robot"><a href="../robot/robot.html">Robot Design</a></div>
+           <div class ="missions"><a href="../missions/missions.html">Missions</a></div>
+           <div class ="allied-work"><a href="../work/hello.html">AlliedWork</a></div>
         </div>
     </nav>
     <script>
